--- a/assets/js/package.json
+++ b/assets/js/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "dotenv": "^8.1.0"
+    "dotenv": "^8.1.0",
+    "node-spotify-api": "^1.1.1"
   }
 }
